templates/haste_template.yaml
---
# Source: haste/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-haste
  labels:
    helm.sh/chart: haste-0.1.5
    app.kubernetes.io/name: haste
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "ce75235"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 7777
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: haste
    app.kubernetes.io/instance: release-name
---
# Source: haste/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-haste
  labels:
    helm.sh/chart: haste-0.1.5
    app.kubernetes.io/name: haste
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "ce75235"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: haste
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: haste
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
      - name: release-name-haste
        image: "ghcr.io/nicholaswilde/haste:ce75235-ls2"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 7777
          protocol: TCP
        volumeMounts:
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
---
# Source: haste/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-haste
  labels:
    helm.sh/chart: haste-0.1.5
    app.kubernetes.io/name: haste
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "ce75235"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
spec:
  rules:
    - host: "haste.192.168.1.203.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-haste
                port:
                  number: 7777
